# modfm

./: .gitmodules  CMakeLists.txt  README.md
src/: envgen.cc  envgen.h  gui.cc  gui.h  main.cc  midi.cc  midi.h  oscillator.cc  oscillator.h  patch.h  player.cc  player.h
src/ui/: main.cc  midi.cc  patch_editor.cc
